k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratestack-deployment
  labels:
    app: ratestack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratestack
  template:
    metadata:
      labels:
        app: ratestack
    spec:
      containers:
        - name: ratestack-app
          image: ratestack-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
