k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratestack-service
spec:
  type: NodePort
  selector:
    app: ratestack
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30085
